--- a/test.css
+++ b/test.css
@@ -11,7 +11,7 @@ body, html {
 }
 
 .title {
-  font-size: 30px;
+  font-size: 35px;
   font-style: italic;
   font-weight: bold;
   color: white;
@@ -22,7 +22,7 @@ body, html {
 .flexContainerTwo {
   margin: 20px;
   border-radius: 10px;
-  background-color: #E0E0E0;
+  background-color: #424242;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -33,14 +33,14 @@ body, html {
   padding: 50px;
   font-family: sans-serif;
   font-size: 30px;
-  color: black;
+  color: white;
   border-radius: 5px;
   font-weight: bold;
 }
 
 .flexTest {
   display: flex;
-  background-color: #212121;
+  background-color: #424242;
   margin: 20px;
   border-radius: 10px;
 }
